tests/syntax/good/170_import.grace
import "010_number" as num
