tests/syntax/bad/170_import_unnamed_error.grace
import "../good/010_number"
